and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/spec/v2.0.0.html).

## [Unreleased] 

### Added

- **Melhorias de campos!** - Agora é possível melhorar os campos da fazendinha com os *Fertilizantes*. Os fertilizantes garantem que as plantações retornem mais plantas, e que amadureçam mais rápido. Use seus itens em `/fazendinha administrar campos`.

### Changed

- Quando o seu silo não está em sua capacidade máxima e você colhe uma planta que ultrapassaria o limite, agora o peso colhido é reduzido para o que cabe em seu silo. Com isso a colheita de uma planta só será impedida se o silo estiver completamente cheio. 

### Fixed

- A notificação de participação de lucros na compra de imagens foi corrigida. 

## [5.20.7] - 2025-01-02

### Fixed

- Se o silo está cheio, ainda é possível descartar plantas em crescimento ou aprodecidas.

## [5.20.6] - 2024-11-03

### Removed

- Evento de dia dos mortos foi completamente removido.

## [5.20.5] - 2024-11-01

### Removed

- O evento de dia dos mortos terminou! Gaste todos seus Cempasúchil até o fim do segundo dia de novembro!

## [5.20.4] - 2024-10-24

### Added

- Adicionado a melhor e pior estação das sementes no `/loja comprar sementes`. - Sugerido por @0_tal_do_mabs

## [5.20.3] - 2024-10-19

### Added

- Adicionado um novo top! Use o comando `/top fazendeiros tipo:experiência` para ver os fazendeiros mais experientes.

### Changed

- O `/personalizar título` agora possui bullet points para diferenciar os títulos, facilitando na visualização mobile. - Sugerido por @mareys. 

## [5.20.2] - 2024-10-14

### Added
